# helena

./: .clang-format  CMakeLists.txt  Cargo.toml  build.zig  build.zig.zon  configure  helena.c  hx_limits.h  hx_string.c  hx_string.h  rustfmt.toml
.github/workflows/: rust.yml
ast/: Cargo.toml
ast/src/: branch.rs  function.rs  lib.rs  node.rs
ast/src/common/: identifier.rs  mod.rs  newline.rs  operation.rs  space.rs  spacing.rs
ast/src/function/: function.rs  mod.rs  value_parameter.rs
configuration/: HelenaLibrary.cmake  HelenaTestPlan.cmake
include/: argparser.h  lexer.h
include/argparser/: owned_array.h
include/hx/: limits.h  string.h
include/lexer/: lexer.h
lib/argparser/: CMakeLists.txt  README.md  argparser.c  owned_array.c
lib/argparser/include/: argparser.h
lib/argparser/include/argparser/: owned_array.h
lib/argparser/src/: argparser.c  owned_array.c
lib/argparser/tests/: CMakeLists.txt  owned_array.tests.c
lib/hx/: CMakeLists.txt  README.md  string.c
lib/hx/include/hx/: limits.h
lib/hx/src/: string.c
lib/lexer/: CMakeLists.txt  lexer.c
lib/lexer/src/: lexer.c
lib/lexer/tests/: CMakeLists.txt  lexer.tests.c
samples/: hello-long.helena  hello-short.helena  linked-list.helena  loops.helena
src/: lexer.h  main.rs  main.zig  root.zig
src/lexer/: lexer.zig  tokens.zig  utf8.zig
test/: CMakeLists.txt
test/argparser/: CMakeLists.txt  owned_array.tests.cpp
test/hx/: CMakeLists.txt  string.tests.cpp
test/lexer/: CMakeLists.txt  configuration.cpp  lexer.tests.c  lexer.tests.cpp  strrand.c  strrand.tests.cpp  token_general_checkers.tests.cpp  token_is_attributor.tests.cpp  token_is_id.tests.cpp  token_is_var_keyword.tests.cpp
test/lexer/include/: strrand.h
tests/: CMakeLists.txt
tooling/argparser/: argparser.c  argparser.h  owned_array.c  owned_array.h  owned_array.tests.c
